Migrate API request metering from file I/O to SQLite database